tests/import_as_with_symbols_bad.stderr
tests/import_as_with_symbols_bad.sl:0:33: error: import with symbol list cannot use as _
