tests/import_as_with_symbols_bad.sl
import "lib/math" as _ { Double }

fn main() {}
